--- a/VRChat/69/1263969.html
+++ b/VRChat/69/1263969.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "VbKjYgL5AbFT1JRsJYXq40HBnlNxj11qXhVHMeGYx1E="></script>
+    "fqHy+VX4EI7oKMrIltM8HoTZUueQXdKelj2m6baxeSc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『ルナレッタ(変身セット)』","description":"本モデルはUnityのHumanoid形式に対応した3Dモデルとなっております。\n【ご注意】\nこのパッケージはVRChatのSDK2(avatars2.0)向けに設定したものです。以降のバージョンに対応させる場合はご自身での設定が必要となりますのでご了承の上ご購入ください。\n\n\n『ルナレッタ(変身セット)』には\n\n・変身アニメーションの付いたルナレッタのモデル\n・単品のルナレッタ(人間ver)と(獣人ver)の内容物すべて\n・四足verのおまけモデル(ボーン未設定)\n\nが入っています。\n\n\n\n\n＜内容物＞\n・unitypackageファイル　３バージョン分\n・blend形式およびfbx形式モデルデータ\n　(fbx形式はテクスチャ未設定)　３バージョン分\n・テクスチャ画像　\n・psd形式改変用テクスチャ画像　\n・サンプル表情アニメーション　３バージョン分\n・四足verのおまけモデル\n\n＜利用規約＞\n動画やゲーム、アプリにおける本モデルの利用は商用を含めて可能です。\nモデル自体の再配布、販売を禁止します。\n(ゲーム等の公開の際、暗号化していないフォルダに入れるなど\nモデルデータとして再度使用できる状態での配布・販売はおやめください)\nモデルの改変は公序良俗に反するものでなければご自由に行ってください。\n\nVRChatへのアップロードにて購入者ご本人のみが使用する場合は再配布と捉えないものとします。\nアバターペデスタルやCloning機能など他人が使用できる状態にすることはご遠慮ください。\n\n\n＜更新履歴＞\n\n2019/03/16　不具合修正しました(Ver1.01)\n・獣人モデル\n表情発動時に体のメッシュがはみ出る、動いた際に服(首の前掛け)のメッシュ裏がはみ出る、表情LunaSmileFの設定ミス　を修正\n\n・変身モデル\n人間時、腕を上げるとメッシュが出るのを修正\n人間・獣人の単品バージョンのblend、fbx、unitypackageファイルを追加\n\n2019/03/08　販売開始しました　(Ver1.00)","url":"https://booth.pm/ja/items/1263969","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/b58bbbf9-f493-4b3f-87ba-a69d30c4b84f/i/1263969/b662d9d1-2b28-41d2-8846-ab7cf21dc653_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VbKjYgL5AbFT1JRsJYXq40HBnlNxj11qXhVHMeGYx1E="></script>
+    nonce="fqHy+VX4EI7oKMrIltM8HoTZUueQXdKelj2m6baxeSc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -675,7 +675,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
